--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -43,9 +43,10 @@
                 Width="30" Height="30" 
                 HorizontalAlignment="Right" 
                 VerticalAlignment="Top"                 
-                Margin="0,10,10,0">
+                Margin="0,0,0,0">
             <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="X" TextAlignment="Center"></TextBlock></StackPanel>
+                <TextBlock Text="X" TextAlignment="Center" FontSize="16" FontWeight="Bold" />
+            </StackPanel>
         </Button>
         <RichTextBox x:Name="richTextBox" 
                      Margin="100,50,100,50" 
