--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -27,6 +27,45 @@
         </Style>
     </Window.Resources>
     <Grid>
+        <StackPanel 
+                Orientation="Horizontal"
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top"   >
+            <Button
+                Style="{StaticResource FadeFocus}" 
+                Click="Save_Click" 
+                Opacity="0.4" 
+                Width="30" Height="30" 
+                Margin="0,0,0,0">
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="Transparent">
+                            <ContentPresenter/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+                <StackPanel VerticalAlignment="Center">
+                    <TextBlock Text="S" TextAlignment="Center" FontSize="16" FontWeight="Bold" />
+                </StackPanel>
+            </Button>
+            <Button
+                Style="{StaticResource FadeFocus}" 
+                Click="Load_Click" 
+                Opacity="0.4" 
+                Width="30" Height="30" 
+                Margin="0,0,0,0">
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="Transparent">
+                            <ContentPresenter/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+                <StackPanel VerticalAlignment="Center">
+                    <TextBlock Text="L" TextAlignment="Center" FontSize="16" FontWeight="Bold" />
+                </StackPanel>
+            </Button>
+        </StackPanel>
         <Button
                 Style="{StaticResource FadeFocus}" 
                 Click="Exit_Click" 
