--- a/src/Codex.Views/MainWindow.xaml
+++ b/src/Codex.Views/MainWindow.xaml
@@ -86,9 +86,9 @@
             </StackPanel>
         </Button>
         <local:BindableRichTextBox x:Name="MainText" 
-                     Margin="50,50,50,50" 
-                     BorderThickness="0">
-            <FlowDocument FontFamily="Arial" FontSize="16" LineHeight="24" />
+                     Margin="50,50,50,50"
+                     XamlContent="{Binding xamlContent}"
+                     WordCount="{Binding wordCount, Mode=OneWay}">
         </local:BindableRichTextBox>
         <TextBlock x:Name="WordCount"
                    Style="{StaticResource FadeFocus}" 
