further work on binding, with little success

--- a/src/Codex.Views/MainWindow.xaml
+++ b/src/Codex.Views/MainWindow.xaml
@@ -87,8 +87,7 @@
         </Button>
         <local:BindableRichTextBox x:Name="MainText" 
                      Margin="50,50,50,50"
-                     XamlContent="{Binding xamlContent}"
-                     WordCount="{Binding wordCount, Mode=OneWay}">
+                     XamlContent="{Binding xamlContent}">
         </local:BindableRichTextBox>
         <TextBlock x:Name="WordCount"
                    Style="{StaticResource FadeFocus}" 
