--- a/src/Codex.Views/MainWindow.xaml
+++ b/src/Codex.Views/MainWindow.xaml
@@ -87,7 +87,7 @@
         </Button>
         <local:BindableRichTextBox x:Name="MainText" 
                      Margin="50,50,50,50"
-                     XamlContent="{Binding xamlContent}">
+                     XamlContent="{Binding XamlContent}">
         </local:BindableRichTextBox>
         <TextBlock x:Name="WordCount"
                    Style="{StaticResource FadeFocus}" 
