some minor cleanup

--- a/src/Codex.Views/MainWindow.xaml
+++ b/src/Codex.Views/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Codex.Views"
         mc:Ignorable="d"
-        Title="Codex" Height="800" Width="600" WindowStyle="None" WindowStartupLocation="CenterScreen" ResizeMode="CanResize">
+        Title="Codex" Height="800" Width="600" WindowStyle="None" WindowStartupLocation="CenterScreen" ResizeMode="CanResize"
+        Closing="MainWindow_Closing">
     <Window.Resources>
         <Style x:Key="FadeFocus" TargetType="{x:Type FrameworkElement}">
             <Style.Triggers>
