--- a/src/Codex.Views/MainWindow.xaml
+++ b/src/Codex.Views/MainWindow.xaml
@@ -8,24 +8,7 @@
         Title="Codex" Height="800" Width="600" WindowStyle="None" WindowStartupLocation="CenterScreen" ResizeMode="CanResize"
         Closing="MainWindow_Closing">
     <Window.Resources>
-        <Style x:Key="FadeFocus" TargetType="{x:Type FrameworkElement}">
-            <Style.Triggers>
-                <EventTrigger RoutedEvent="Control.MouseEnter">
-                    <BeginStoryboard>
-                        <Storyboard >
-                            <DoubleAnimation Duration="0:0:0.2" To="1" Storyboard.TargetProperty="Opacity"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-                <EventTrigger RoutedEvent="Control.MouseLeave">
-                    <BeginStoryboard>
-                        <Storyboard >
-                            <DoubleAnimation Duration="0:0:0.2" To="0.4" Storyboard.TargetProperty="Opacity"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-            </Style.Triggers>
-        </Style>
+        <ResourceDictionary Source="SharedStyles.xaml" />
     </Window.Resources>
     <Grid>
         <StackPanel 
