RAINY DAY CODE REMOVAL removed all main code behind and markup

--- a/src/Codex.Views/MainWindow.xaml
+++ b/src/Codex.Views/MainWindow.xaml
@@ -5,92 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Codex.Views"
         mc:Ignorable="d"
-        Title="Codex" Height="800" Width="600" WindowStyle="None" WindowStartupLocation="CenterScreen" ResizeMode="CanResize"
-        Closing="MainWindow_Closing">
-    <Window.Resources>
-        <ResourceDictionary Source="SharedStyles.xaml" />
-    </Window.Resources>
+        Title="Codex" Height="300" Width="300" WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterScreen">
     <Grid>
-        <StackPanel 
-                Orientation="Horizontal"
-                HorizontalAlignment="Left" 
-                VerticalAlignment="Top"   >
-            <Button Command="{Binding ExamineModel}" Content="ExamineModel" />
-            <Button
-                Style="{StaticResource FadeFocus}" 
-                Click="Save_Click" 
-                Opacity="0.4" 
-                Width="30" Height="30" 
-                Margin="0,0,0,0">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="Transparent">
-                            <ContentPresenter/>
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
-                <StackPanel VerticalAlignment="Center">
-                    <TextBlock Text="S" TextAlignment="Center" FontSize="16" FontWeight="Bold" />
-                </StackPanel>
-            </Button>
-            <Button
-                Style="{StaticResource FadeFocus}" 
-                Click="Load_Click" 
-                Opacity="0.4" 
-                Width="30" Height="30" 
-                Margin="0,0,0,0">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="Transparent">
-                            <ContentPresenter/>
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
-                <StackPanel VerticalAlignment="Center">
-                    <TextBlock Text="L" TextAlignment="Center" FontSize="16" FontWeight="Bold" />
-                </StackPanel>
-            </Button>
-        </StackPanel>
-        <Button
-                Style="{StaticResource FadeFocus}" 
-                Click="Exit_Click"
-                Opacity="0.4" 
-                Width="30" Height="30" 
-                HorizontalAlignment="Right" 
-                VerticalAlignment="Top"                 
-                Margin="0,0,0,0">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="Transparent">
-                        <ContentPresenter />
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-            <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="X" TextAlignment="Center" FontSize="16" FontWeight="Bold" />
-            </StackPanel>
-        </Button>
-        <local:BindableRichTextBox x:Name="MainText" 
-                     Margin="50,50,50,50"
-                     XamlContent="{Binding XamlContent, Mode=TwoWay}"
-                     WordCount="{Binding WordCount, Mode=OneWayToSource}">
-        </local:BindableRichTextBox>
-        <StackPanel
-                Style="{StaticResource FadeFocus}" 
-                Opacity="0.4"
-                Orientation="Horizontal"
-                HorizontalAlignment="Left" 
-                VerticalAlignment="Bottom"
-                Margin="5">
-            <TextBlock Text="{Binding WordCount, Mode=OneWay}" />
-            <TextBlock Text=" words" />
-        </StackPanel>
-        <TextBlock x:Name="Saving"
-                   Style="{StaticResource FadeFocus}" 
-                   Opacity="0.4"
-                   HorizontalAlignment="Right" 
-                   VerticalAlignment="Bottom"
-                   Margin="5"
-                   Text="" />
+        
     </Grid>
 </Window>
