--- a/src/Codex.Views/MainWindow.xaml
+++ b/src/Codex.Views/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="Codex" Height="300" Width="300" WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <StackPanel HorizontalAlignment="Center">
+            <TextBlock TextAlignment="Center" Text="Codex"></TextBlock>
+        </StackPanel>
     </Grid>
 </Window>
