--- a/src/Codex.Views/SceneEditor.xaml
+++ b/src/Codex.Views/SceneEditor.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Codex.Views"
         mc:Ignorable="d"
-        Title="SceneEditor" Height="800" Width="600" WindowStyle="None" WindowStartupLocation="CenterScreen" ResizeMode="CanResize">
+        Title="{Binding Title}" Height="800" Width="600" WindowStyle="None" WindowStartupLocation="CenterScreen" ResizeMode="CanResize">
     <Window.Resources>
         <ResourceDictionary Source="SharedStyles.xaml" />
     </Window.Resources>
