fixed issue with possible delayed window creation

--- a/src/Codex.Views/MainWindow.xaml
+++ b/src/Codex.Views/MainWindow.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <StackPanel HorizontalAlignment="Center">
             <TextBlock TextAlignment="Center" Text="Codex"></TextBlock>
+            <Button Command="{Binding ShowSceneEditor}" Content="Show Scene Editor" />
         </StackPanel>
     </Grid>
 </Window>
