removed model refs

--- a/src/Codex.Views/TableOfContents.xaml
+++ b/src/Codex.Views/TableOfContents.xaml
@@ -4,7 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Codex.Views"
-        xmlns:model="clr-namespace:Codex.Model;assembly=Codex.Model"
         mc:Ignorable="d"
         Title="TableOfContents" Height="450" Width="800">
     <DockPanel>
@@ -15,13 +14,13 @@
         <TreeView ItemsSource="{Binding Acts}">
             
             <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type model:CoreModel+Act}" ItemsSource="{Binding Chapters}">
+                <HierarchicalDataTemplate x:Key="ActTemplate" ItemsSource="{Binding Chapters}">
                     <TextBlock Text="{Binding Title}" />
                 </HierarchicalDataTemplate>
-                <HierarchicalDataTemplate DataType="{x:Type model:CoreModel+Chapter}" ItemsSource="{Binding Scenes}">
+                <HierarchicalDataTemplate x:Key="ChapterTemplate" ItemsSource="{Binding Scenes}">
                     <TextBlock Text="{Binding Title}" />
                 </HierarchicalDataTemplate>
-                <DataTemplate DataType="{x:Type model:CoreModel+Scene}">
+                <DataTemplate x:Key="SceneTemplate">
                     <TextBlock Text="{Binding Title}" />
                 </DataTemplate>
             </TreeView.Resources>
