--- a/src/Codex.Views/TableOfContents.xaml
+++ b/src/Codex.Views/TableOfContents.xaml
@@ -6,31 +6,30 @@
         xmlns:local="clr-namespace:Codex.Views"
         mc:Ignorable="d"
         Title="TableOfContents" Height="450" Width="800">
+    <Window.Resources>
+        <DataTemplate x:Key="SceneTemplate">
+            <TextBlock Text="{Binding Title}" />
+        </DataTemplate>
+        <HierarchicalDataTemplate x:Key="ChapterTemplate" ItemsSource="{Binding Scenes}" ItemTemplate="{StaticResource SceneTemplate}">
+            <TextBlock Text="{Binding Title}" />
+        </HierarchicalDataTemplate>
+        <HierarchicalDataTemplate x:Key="ActTemplate" ItemsSource="{Binding Chapters}" ItemTemplate="{StaticResource ChapterTemplate}">
+            <TextBlock Text="{Binding Title}" />
+        </HierarchicalDataTemplate>
+    </Window.Resources>
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" Height="200">
             <TextBlock Margin="10" Text="[Book Title]" HorizontalAlignment="Center" />
             <TextBlock Margin="10" Text="Table of Contents" HorizontalAlignment="Center" />
         </StackPanel>
-        <TreeView ItemsSource="{Binding Acts}">
-            
-            <TreeView.Resources>
-                <HierarchicalDataTemplate x:Key="ActTemplate" ItemsSource="{Binding Chapters}">
-                    <TextBlock Text="{Binding Title}" />
-                </HierarchicalDataTemplate>
-                <HierarchicalDataTemplate x:Key="ChapterTemplate" ItemsSource="{Binding Scenes}">
-                    <TextBlock Text="{Binding Title}" />
-                </HierarchicalDataTemplate>
-                <DataTemplate x:Key="SceneTemplate">
-                    <TextBlock Text="{Binding Title}" />
-                </DataTemplate>
-            </TreeView.Resources>
-            
+        
+        <TreeView ItemsSource="{Binding Acts}" ItemTemplate="{StaticResource SceneTemplate}">
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="True"/>
                 </Style>
             </TreeView.ItemContainerStyle>
-
         </TreeView>
+        
     </DockPanel>
 </Window>
