experiments with theme switching

--- a/src/Codex.Views/MainWindow.xaml
+++ b/src/Codex.Views/MainWindow.xaml
@@ -14,6 +14,7 @@
             <TextBlock TextAlignment="Center" Text="Codex"></TextBlock>
             <Button Command="{Binding ShowSceneEditor}" Content="Show Scene Editor" />
             <Button Command="{Binding ShowTableOfContents}" Content="Show Table of Contents" />
+            <Button Click="SwitchTheme_Click" Content="Switch Theme" />
         </StackPanel>
     </Grid>
 </Window>
